--- a/resources/css.hbs
+++ b/resources/css.hbs
@@ -3,7 +3,7 @@
 	src: {{{src}}};
 }
 
-.{{baseSelector}} {
+.{{baseSelector}}:before {
 	font-family: {{fontName}} !important;
 	font-style: normal;
 	font-weight: normal !important;
