--- a/resources/css.hbs
+++ b/resources/css.hbs
@@ -3,11 +3,14 @@
 	src: {{{src}}};
 }
 
+.{{baseSelector}} {
+	font-family: {{fontName}} !important;
+}
+
 .{{baseSelector}}:before {
 	font-family: {{fontName}} !important;
 	font-style: normal;
 	font-weight: normal !important;
-	vertical-align: middle;
 }
 
 {{#each iconValues}}
